Auth and User Updated

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
-    "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.1.0",
     "@angular/material": "13.1.1",
     "@angular/platform-browser": "~13.1.0",
@@ -23,20 +22,21 @@
     "@angular/router": "~13.1.0",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@ng-select/ng-select": "^8.1.1",
-    "@tensorflow-models/face-landmarks-detection": "^1.0.1",
-    "@tensorflow-models/mobilenet": "^2.1.0",
-    "@tensorflow/tfjs-backend-webgl": "^3.16.0",
-    "@tensorflow/tfjs-converter": "^3.16.0",
-    "@tensorflow/tfjs-core": "^3.16.0",
+
+    "@tensorflow-models/face-landmarks-detection": "1.0.1",
+    "@tensorflow-models/face-detection": "1.0.1",
+    "@tensorflow-models/mobilenet": "2.1.0",
+    "@tensorflow/tfjs-backend-webgl": "3.16.0",
+    "@tensorflow/tfjs-converter": "3.16.0",
+    "@tensorflow/tfjs-core": "3.16.0",
     "@types/lodash-es": "^4.17.6",
     "@types/long": "^4.0.1",
     "@types/three": "^0.139.0",
     "autoprefixer": "^10.4.0",
-    "firebase": "^9.4.0",
     "jquery": "^3.6.0",
     "lodash-es": "^4.17.21",
     "ng-lazyload-image": "^9.1.2",
-    "ng2-animate-on-scroll": "^2.3.2",
+
     "ngp-image-picker": "^1.5.2",
     "ngx-bar-rating": "^3.0.0",
     "ngx-color-picker": "^12.0.1",
